<resources>
    <string name="app_name">FaceCare</string>
    <string name="signup">Daftar</string>
    <string name="login">Masuk</string>
    <string name="message_welcome_page">Scan wajah kamu, cari tahu apa penyakitnya dan cara mengobatinya.</string>
    <string name="title_welcome_page">Selamat datang di FaceCare!</string>
    <string name="title_signup_page">Lengkapi data dirimu di bawah ini ya</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="message_login_page">Masukkan dulu datamu ya</string>
    <string name="title_login_page">Sudah siap untuk merasakan keajaiban?</string>
    <string name="name">Nama</string>
    <string name="message_main_page">Selamat Datang di FaceCare.</string>
    <string name="greeting">selamat datang di FaceCare</string>
    <string name="logout">Keluar</string>
    <string name="scanTitle">Masukan foto muka kamu di sini!.\nPastikan seluruh muka kamu terlihat jelas ya.</string>
    <string name="ageTitle">Umur</string>
    <string name="faceTypeTitle">Tipe kulit</string>
    <string name="alergiTitle">Alergi</string>
    <string name="scanButton">Scan Sekarang</string>
    <string name="jenisPenyakitText">Jenis Penyakit: Whiteheads</string>
    <string name="detailPenyakitText">Whiteheads atau komedo berwarna putih ini juga merupakan jerawat sering muncul di wajah. Whiteheads muncul karena tersumbatnya pori-pori dan menutupi seluruh permukaan sehingga terlihat benjolan putih.\nUntuk mengatasinya, kamu bisa menggunakan produk dengan kandungan AHA, retinoid, benzoyl peroxide, dan salicylic acid yang berfungsi untuk mengangkat sel kulit mati, membunuh bakteri, dan mengurangi peradangan pada area komedo.</string>
    <string name="default_web_client_id">idk</string>
    <string name="heading_one">Masalah Kulit</string>
    <string name="heading_two">Solusi Cerdas</string>
    <string name="heading_three">Hasil Terbaik</string>
    <string name="camera_error">failed to open camera</string>
    <string name="desc_one">Anda sering merasa bingung dengan masalah kulit wajah yang tak kunjung usai?</string>
    <string name="desc_two">Temukan solusi perawatan kulit wajah yang tepat dengan aplikasi scan muka kami.</string>
    <string name="desc_three">Raih kulit wajah yang sehat dan bercahaya dengan perawatan yang tepat.</string>
    <string name="homeDescription">Deteksi masalah kulit Anda dengan teknologi machine learning. "Klik Mulai" Scan untuk memulai analisis kulit Anda sekarang juga!</string>
    <string name="acneDescription">Jerawat adalah kondisi kulit yang umum, ditandai dengan kemerahan, bengkak, dan kadang bernanah di area wajah, dada, atau punggung. Penyebabnya meliputi produksi sebum berlebih, penumpukan sel kulit mati, bakteri, perubahan hormon, dan faktor genetik. \n\nPengobatan alami meliputi perawatan kulit teratur dengan bahan seperti tea tree oil dan lidah buaya, menjaga kebersihan, dan mengonsumsi makanan sehat yang kaya antioksidan. Meskipun dapat membantu mengurangi jerawat, hasilnya dapat bervariasi tergantung pada jenis dan keparahan jerawat individu. Konsultasikan dengan ahli dermatologi untuk penanganan lebih lanjut jika perlu.</string>
    <string name="healthyDescription">Untuk menjaga wajah tetap sehat dan mencegah masalah kulit seperti jerawat, lakukan langkah-langkah berikut:\n\nBersihkan wajah secara teratur dengan pembersih yang lembut untuk mengangkat kotoran dan minyak.\nGunakan produk perawatan kulit yang sesuai dengan jenis kulit Anda, seperti non-komedogenik untuk menghindari penyumbatan pori-pori.\nHindari menyentuh wajah terlalu sering dan pastikan tangan Anda bersih.\nKonsumsi makanan sehat yang kaya antioksidan dan rendah lemak untuk mendukung kesehatan kulit.\nKelola stres dengan baik melalui aktivitas relaksasi atau hobi yang menyenangkan untuk mengurangi dampak negatifnya terhadap kulit.\n\nDengan menerapkan langkah-langkah ini secara konsisten, Anda dapat mempertahankan kebersihan dan kesehatan kulit wajah dengan lebih baik.</string>
</resources>